fixed style alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,12 +47,13 @@
 
     .features {
       display: flex;
-      justify-content: space-around;
+      justify-content: space-between;
       background-color: white;
       padding: 3rem 0;
     }
 
     .feature {
+      flex: 1;
       text-align: center;
       padding: 1rem;
     }
